--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -30,7 +30,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                            <span class="font-roboto">{{ row.asignado_percent|intcomma }} M. de C&oacute;rdobas</span>
+				<span class="font-roboto">{{ row.asignado_percent|intcomma }}{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <b>MI MUNICIPIO</b>
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
-                                <span class="font-roboto">{{ row.asignado_percent|intcomma }} M. de C&oacute;rdobas</span>
+				<span class="font-roboto">{{ row.asignado_percent|intcomma }}{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                            <span class="font-roboto">{{ row.asignado_percent|intcomma }} M. de C&oacute;rdobas</span>
+				<span class="font-roboto">{{ row.asignado_percent|intcomma }}{% if indicator == 'gf' %} % del gato total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                            <span class="font-roboto">{{ row.asignado|intcomma }} M. de C&oacute;rdobas</span>
+				<span class="font-roboto">{{ row.asignado|intcomma }}{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                             <b>MI MUNICIPIO</b>
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
-                                <span class="font-roboto">{{ row.asignado|intcomma }} M. de C&oacute;rdobas</span>
+				<span class="font-roboto">{{ row.asignado|intcomma }}{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
                     </div>
@@ -127,7 +127,11 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                            <span class="font-roboto">{{ row.asignado|intcomma }} M. de C&oacute;rdobas</span>
+				<span class="font-roboto">{{ row.asignado|intcomma }}
+					{% if indicator == 'gf' %}% del gasto total
+					{% else %}M. de C&oacute;rdobas
+					{% endif %}
+				</span>
                             </span>
                         </div>
                     </div>
@@ -156,7 +160,8 @@
                                     {{ row.ejecutado_percent|intcomma }}
                                 {% else %}
                                     {{ row.ejecutado|intcomma }}
-                                {% endif %}M. de C&oacute;rdobas
+                                {% endif %}
+				{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}
                             </span>
                         </span>
                     </div>
@@ -179,7 +184,8 @@
                                     {{ row.ejecutado_percent|intcomma }}
                                 {% else %}
                                     {{ row.ejecutado|intcomma }}
-                                {% endif %}M. de C&oacute;rdobas
+                                {% endif %}
+				{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}
                             </span>
                         </span>
                     </div>
@@ -204,7 +210,8 @@
                                     {{ row.ejecutado_percent|intcomma }}
                                 {% else %}
                                     {{ row.ejecutado|intcomma }}
-                                {% endif %}M. de C&oacute;rdobas
+                                {% endif %}
+				{% if indicator == 'gf' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}
                             </span>
                         </span>
                     </div>
