--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -28,7 +28,8 @@
                             {% if municipio %}
                                 <div class="col-lg-6 col-md-6 text-center">
                                     <h2 class="title-municipio-name">{{ municipio.nombre }}</h2>
-                                    <input type="hidden" name="municipio" class="form-control" value="{{ municipio.slug }}">
+                                    <input type="hidden" name="municipio" class="form-control"
+                                           value="{{ municipio.slug }}">
                                 </div>
                             {% endif %}
                             <div class="col-xs-4 col-sm-2 col-md-1">
@@ -130,9 +131,9 @@
                 <div>
                     <h3>
                         <strong>
-		            {% block indicator_subtitle %}
+                            {% block indicator_subtitle %}
                                 Ingresos
-		            {% endblock %}
+                            {% endblock %}
                             {% if periodo_list|keyvalue:year == 'F' %}
                                 Ejecutados
                             {% elif periodo_list|keyvalue:year == 'A' %}
@@ -166,12 +167,12 @@
                                 </span>
                                 <div class="info-box-content">
                                     <span class="info-box-number font-17px">
-                                        <strong>Cierre 
-						{% if periodo_list|keyvalue:year == 'I' %}
-						    0
-						{% else %}
-						    {{ ejecutado|million|intcomma }}
-						{% endif %}
+                                        <strong>Cierre
+                                            {% if periodo_list|keyvalue:year == 'I' %}
+                                                0
+                                            {% else %}
+                                                {{ ejecutado|million|intcomma }}
+                                            {% endif %}
 					</strong>
                                     </span>
                                 </div>
@@ -205,31 +206,31 @@
                     {% endblock %}
                 </div>
                 {% block charts %}
-		    {% if indicator != 'gf' %}
-                    <div class="col-xs-12 col-sm-12 col-md-7">
-                        <div class="chart-update col-xs-12 col-sm-12 col-md-1 text-right">
+                    {% if indicator != 'gf' %}
+                        <div class="col-xs-12 col-sm-12 col-md-7">
+                            <div class="chart-update col-xs-12 col-sm-12 col-md-1 text-right">
                             <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                                   aria-hidden="true" id="chart-bubble-1"
                                   data-chartcontainer="bubble-1">
                             </span>
-                            <span id="chart-pie-1"
-                                  class="pma-icon pe-7s-graph pma-fg-gray toggle-chart"
-                                  data-chartcontainer="pie">
+                                <span id="chart-pie-1"
+                                      class="pma-icon pe-7s-graph pma-fg-gray toggle-chart"
+                                      data-chartcontainer="pie">
                             </span>
-                            <span id="chart-bar-1"
-                                  class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart"
-                                  data-chartcontainer="bar">
+                                <span id="chart-bar-1"
+                                      class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart"
+                                      data-chartcontainer="bar">
                             </span>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-11 bubbletree-container chart-container">
-                            <div id="bubble-1" class="bubbletree-wrapper view-main">
-                                <div class="bubbletree"></div>
                             </div>
-                            <div id='pie' class="view-alternative"> Chart will be rendered here</div>
-                            <div id='bar' class="view-alternative"> Chart will be rendered here</div>
+                            <div class="col-xs-12 col-sm-12 col-md-11 bubbletree-container chart-container">
+                                <div id="bubble-1" class="bubbletree-wrapper view-main">
+                                    <div class="bubbletree"></div>
+                                </div>
+                                <div id='pie' class="view-alternative"> Chart will be rendered here</div>
+                                <div id='bar' class="view-alternative"> Chart will be rendered here</div>
+                            </div>
                         </div>
-                    </div>
-		    {% endif %}
+                    {% endif %}
                 {% endblock %}
 
                 {% block main_table %}
