--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -156,7 +156,12 @@
                                 </span>
                                 <div class="info-box-content">
                                     <span class="info-box-number font-17px">
-                                        <strong>Inicial {{ asignado|million|intcomma }}</strong>
+                                        <strong>
+                                            Inicial {{ asignado|million|intcomma }}
+                                            {% if asignado_percent %}
+                                                ({{ asignado_percent }}%)
+                                            {% endif %}
+                                        </strong>
                                     </span>
                                 </div>
                             </div>
@@ -167,13 +172,18 @@
                                 </span>
                                 <div class="info-box-content">
                                     <span class="info-box-number font-17px">
-                                        <strong>Cierre
+                                        <strong>
+                                            Cierre
                                             {% if periodo_list|keyvalue:year == 'I' %}
-                                                0
+                                                0 (0%)
                                             {% else %}
                                                 {{ ejecutado|million|intcomma }}
+                                                {% if ejecutado_percent %}
+                                                    ({{ ejecutado_percent }}%)
+                                                {% endif %}
                                             {% endif %}
-					</strong>
+
+                                        </strong>
                                     </span>
                                 </div>
                             </div>
