agregando clase text-nowrap

--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -155,7 +155,7 @@
                                 <span class="info-box-icon pma-icon initial">
                                 </span>
                                 <div class="info-box-content">
-                                    <span class="info-box-number font-17px">
+                                    <span class="info-box-number font-17px text-nowrap">
                                         <strong>
                                             Inicial {{ asignado|million|intcomma }} M. de C&oacute;rdobas
                                             {% if asignado_percent %}
@@ -173,7 +173,7 @@
                                 <span class="info-box-icon pma-icon executed">
                                 </span>
                                 <div class="info-box-content">
-                                    <span class="info-box-number font-17px">
+                                    <span class="info-box-number font-17px text-nowrap">
                                         <strong>
                                             Cierre
                                             {% if periodo_list|keyvalue:year == 'I' %}
