--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -30,7 +30,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                                <span class="font-roboto">{{ row.asignado_percent|default_if_none:0|intcomma }}
+                                <span class="font-roboto">{{ row.asignado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                     {% if mostraren == 'porcentaje' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
@@ -49,7 +49,7 @@
                             <b>MI MUNICIPIO</b>
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
-                            <span class="font-roboto">{{ row.asignado_percent|default_if_none:0|intcomma }}{% if mostraren == 'porcentaje' %}% del
+                            <span class="font-roboto">{{ row.asignado_percent|default_if_none:0|intcomma|floatformat:-2 }}{% if mostraren == 'porcentaje' %}% del
                                 gasto total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
@@ -69,7 +69,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                                <span class="font-roboto">{{ row.asignado_percent|default_if_none:0|intcomma }}{% if mostraren == 'porcentaje' %} % del
+                                <span class="font-roboto">{{ row.asignado_percent|default_if_none:0|intcomma|floatformat:-2 }}{% if mostraren == 'porcentaje' %} % del
                                     gato total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
@@ -93,7 +93,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                                <span class="font-roboto">{{ row.asignado|default_if_none:0|intcomma }}{% if mostraren == 'porcentaje' %}% del gasto
+                                <span class="font-roboto">{{ row.asignado|default_if_none:0|intcomma|floatformat:-2 }}{% if mostraren == 'porcentaje' %}% del gasto
                                     total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
@@ -112,7 +112,7 @@
                             <b>MI MUNICIPIO</b>
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
-                            <span class="font-roboto">{{ row.asignado|default_if_none:0|intcomma }}{% if mostraren == 'porcentaje' %}% del gasto
+                            <span class="font-roboto">{{ row.asignado|default_if_none:0|intcomma|floatformat:-2 }}{% if mostraren == 'porcentaje' %}% del gasto
                                 total{% else %}M. de C&oacute;rdobas{% endif %}</span>
                             </span>
                         </div>
@@ -132,7 +132,7 @@
                                {% endif %}
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                                 <br>
-                                <span class="font-roboto">{{ row.asignado|default_if_none:0|intcomma }}
+                                <span class="font-roboto">{{ row.asignado|default_if_none:0|intcomma|floatformat:-2 }}
                                     {% if mostraren == 'porcentaje' %}% del gasto total
                                     {% else %}M. de C&oacute;rdobas
                                     {% endif %}
@@ -162,9 +162,9 @@
                             <br>
                             <span class="font-roboto">
                                 {% if row.ejecutado_percent %}
-                                    {{ row.ejecutado_percent|default_if_none:0|intcomma }}
+                                    {{ row.ejecutado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                 {% else %}
-                                    {{ row.ejecutado|default_if_none:0|intcomma }}
+                                    {{ row.ejecutado|default_if_none:0|intcomma|floatformat:-2 }}
                                 {% endif %}
                                 {% if mostraren == 'porcentaje' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}
                             </span>
@@ -186,9 +186,9 @@
                         <br>
                           <span class="font-roboto">
                                 {% if row.ejecutado_percent %}
-                                    {{ row.ejecutado_percent|default_if_none:0|intcomma }}
+                                    {{ row.ejecutado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                 {% else %}
-                                    {{ row.ejecutado|default_if_none:0|intcomma }}
+                                    {{ row.ejecutado|default_if_none:0|intcomma|floatformat:-2 }}
                                 {% endif %}
                               {% if mostraren == 'porcentaje' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}
                             </span>
@@ -212,9 +212,9 @@
                             <br>
                             <span class="font-roboto">
                                 {% if row.ejecutado_percent %}
-                                    {{ row.ejecutado_percent|default_if_none:0|intcomma }}
+                                    {{ row.ejecutado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                 {% else %}
-                                    {{ row.ejecutado|default_if_none:0|intcomma }}
+                                    {{ row.ejecutado|default_if_none:0|intcomma|floatformat:-2 }}
                                 {% endif %}
                                 {% if mostraren == 'porcentaje' %}% del gasto total{% else %}M. de C&oacute;rdobas{% endif %}
                             </span>
